# pidor-bot

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  const.py  docker-compose.yml  logger.py  main.py  postgreSQL.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 02b278dce98e_create_duels_table.py  20260614_add_cooldown_pidor_user.py  20260614_add_user_is_active.py  20260615_add_achievements.py  20260616_add_fanfic_messages.py  20260619_add_fanfic_usage_limit.py  2519079d30f9_add_balance_skills_user_skills_duel_win_.py  adc142fcd221_initial.py
config/: config.py  constants.py
database/: __init__.py  crud.py  models.py  money_format.py  transaction_reasons.py
database/CRUD/: chat_crud.py  cooldown_crud.py  currency_transaction_crud.py  duel_crud.py  user_crud.py
handlers/: common.py  duel.py  game.py  registration.py  triggers.py  utils.py
middlewares/: db_middleware.py
old-bot/: const.py  requirements.txt
services/: achievement_service.py  ai_response_buffer.py  ai_service.py  auto_pidor_service.py  backup_service.py  cooldown.py  cooldown_service.py  duel_logic.py  duel_service.py  fanfic_service.py  pidor_service.py  slots_logic.py  slots_service.py  time_service.py  utils.py
tests/: conftest.py  test_achievements.py  test_admin_balance.py  test_admin_diagnostics.py  test_ai_response_buffer.py  test_ai_service.py  test_business_logic.py  test_fanfic.py  test_money_format.py  test_pidor_service.py  test_profile_handler.py  test_slots_handler.py  test_slots_logic.py  test_stats_handler.py
(+28 files in other folders)
